fixed font spacing and capitalization

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,6 +451,7 @@ h3, h4, h5, h6 {
   line-height: 56px;
   color: #fff;
   font-family: "Barbaro-Roman", sans-serif;
+  letter-spacing: 5px;
 }
 #hero h1 span {
   color: var(--main-color);
